--- a/stylesheets/_stylesheet.css
+++ b/stylesheets/_stylesheet.css
@@ -4,7 +4,7 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, Meiryo, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   color: #606c71; }
@@ -74,9 +74,6 @@ a {
 .project-name {
   margin-top: 0;
   margin-bottom: 0.1rem; }
-
-.project-name a {
-  color: #fff; }
 
 @media screen and (min-width: 64em) {
   .project-name {
@@ -211,7 +208,7 @@ a {
     max-width: 64rem;
     padding: 2rem 6rem;
     margin: 0 auto;
-    font-size: 1.0rem; } }
+    font-size: 1.1rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .main-content {
