fix setting and layouts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <body>
 
     <section class="page-header">
-      <h1 class="project-name"><a href="{{ site.url }}">SHIRASAGI</a></h1>
+      <h1 class="project-name"><a href="/">SHIRASAGI</a></h1>
     </section>
 
     <section class="main-content">
