--- a/_layouts/top.html
+++ b/_layouts/top.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/custom.css" media="screen">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="/javascripts/script.js"></script>
   </head>
