--- a/_layouts/top.html
+++ b/_layouts/top.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>{{ site.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="SHIRASAGI,シラサギ,CMS,OSS,オープンソースソフトウェア" />
+    <meta name="description" content="オープンソースCMS「シラサギ」の開発・運用ドキュメントです。" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen">
